# mongo-as-a-service

./: README.md
backend/: .coveragerc  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
backend/app/: auth.py  crud.py  database.py  main.py  model.py  provisioner.py  repository.py  routes.py  serialization.py  services.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_crud.py  test_integration.py  test_routes.py
mongo-monitor/: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
mongo-operator/: .gitignore  README.md
mongo-operator/controller/: Dockerfile  pyproject.toml  requirements.txt
mongo-operator/controller/src/: controller.py
mongo-operator/crds/: mongoinstances.yaml
mongo-operator/example/: mongoinstance.yaml
mongo-operator/operator/src/: controller.py  handlers.py  main.py
mongo-operator/run-on-k8s/: manifest.yaml
